--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ body {
   margin: 0;
 }
 img {
-  margin: auto;
+   display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
   
 }
