Automatically backed up by Learn

--- a/style.css
+++ b/style.css
@@ -22,8 +22,8 @@ figcaption {
   text-align: center;
 }
 
-p#featured-property {
+#featured-property {
   width: 800px;
   text-align: center;
-  background: blue;
+  background: ;
 }
