--- a/style.css
+++ b/style.css
@@ -22,8 +22,8 @@ figcaption {
   text-align: center;
 }
 
-#featured-property {
+p#featured-property {
   width: 800px;
   text-align: center;
-  background: ;
+  background: blue;
 }
