--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body {
   height: 100%;
   margin: 0;
 }
-img {
- 
+img#featured-property {
+   display: block;
   margin-left: auto;
   margin-right: auto;
 }
@@ -22,7 +22,7 @@ figcaption {
   text-align: center;
 }
 
-#featured-property {
+p#featured-property {
   width: 800px;
   text-align: center;
   background: blue;
