--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   height: 100%;
   margin: 0;
 }
-img#featured-property {
+img {
    display: block;
   margin-left: auto;
   margin-right: auto;
@@ -22,7 +22,7 @@ figcaption {
   text-align: center;
 }
 
-p#featured-property {
+p{
   width: 800px;
   text-align: center;
   background: blue;
