--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ a {
   padding-right: 10px;
   background-color: lightgray;
 }
-figcaption#featured-property {
+figure#featured-property {
   font-size: 15px;
   text-align: center;
 }
