--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ figure#featured-property {
   text-align: center;
 }
 
-p#featured-property{
+#featured-property{
   width: 800px;
   text-align: center;
   background: blue;
