--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ figcaption {
   text-align: center;
 }
 
-#featured-property {
+#featured-property p {
   width: 800px;
   text-align: center;
   background: blue;
