--- a/style.css
+++ b/style.css
@@ -1,5 +1,40 @@
+header{
+  text-align: center;
+}
 body {
   width: 100%;
   height: 100%;
   margin: 0;
+}
+img {
+   display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 900;
+}
+
+a {
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: lightgray;
+}
+figcaption {
+  font-size: 15px;
+  text-align: center;
+}
+
+#featured-property p {
+  width: 800px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+#details {
+  display: block;
+  float: left;
+}
+div {
+  background-color: red;
+  text-align: center;
+  width: 200px;
 }
